Fix cover upload ux (#184)
* do not block submit on thumb or cover error

* improve cover upload UX

* p padding

--- a/ui/scss/component/_channel.scss
+++ b/ui/scss/component/_channel.scss
@@ -40,6 +40,9 @@ $actions-z-index: 2;
   width: 100%;
   height: 100%;
   position: absolute;
+  p {
+    padding: var(--padding-m);
+  }
 }
 
 .channel-cover__gradient {
@@ -103,7 +106,7 @@ $actions-z-index: 2;
 
   @media (max-width: $breakpoint-small) {
     top: 0;
-    margin-top: var(--spacing-m);
+    margin-top: var(--spacing-xl);
   }
 }
 
@@ -259,7 +262,7 @@ $actions-z-index: 2;
     margin-top: 0;
 
     .button {
-      margin-top: var(--spacing-l);
+      margin-top: var(--spacing-xxl);
     }
   }
 }
