--- a/ui/scss/init/_vars.scss
+++ b/ui/scss/init/_vars.scss
@@ -23,6 +23,7 @@ $breakpoint-large: 1600px;
   --spacing-m: calc(2rem / 2);
   --spacing-l: 2rem;
   --spacing-xl: 3rem;
+  --spacing-xxl: 4rem;
 
   // Aspect ratio
   --aspect-ratio-bluray: 41.6666666667%; // 12:5
